# stockr

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md  stonks.html
server/: Cargo.toml
server/src/: analysis.rs  cli.rs  main.rs  utils.rs
src/: analysis.rs  chart.rs  cli.rs  lib.rs  main.rs  plot.rs  utils.rs
web_server/: Cargo.toml
web_server/src/: main.rs
www/: bootstrap.js  index.html  index.js  package-lock.json  package.json
