[package]
name = "stockr"
version = "0.1.0"
authors = ["Jared Drueco <drueco03@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
plotters = "0.3.5"
plotters-canvas = "0.3.0"
console_error_panic_hook = { version = "0.1.7", optional = true }
chrono = "0.4.33"
wasm-bindgen = "0.2.91"
js-sys = "0.3.68"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.4"
wasm-bindgen-futures = "0.4.41"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
