[package]
name = "web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yahoo_finance_api = "2.1.0"
clap = { version = "4.4.18", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
actix-files = "0.6.5"
regex = "1.10.3"